MSP-15 Autorisation management